--- a/02-react-create-element.html
+++ b/02-react-create-element.html
@@ -5,8 +5,8 @@
   <script type="text/javascript">
     const rootElement = document.getElementById('root')
     const element = React.createElement('div', {
-      className: 'container',
-      children: 'Hello World',
+      children: ['Hello World...', '!goodbye world'],
+      className: 'container'
     })
     ReactDOM.render(element, rootElement)
   </script>
